test/sema/exercise/struct_in_unary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn main(): unit {
  let s = S { x: 1 };

  !s;
  // CHECK: [[# @LINE - 1 ]]:4: error: expected 'bool' operand
}
